@@ -16,12 +16,22 @@
 
 package dagger.internal.codegen.binding;
 
+import static dagger.internal.codegen.base.MapKeys.getMapKey;
+import static dagger.internal.codegen.base.MoreAnnotationMirrors.wrapOptionalInEquivalence;
+import static dagger.internal.codegen.base.Preconditions.checkArgument;
+import static dagger.internal.codegen.base.Preconditions.checkNotNull;
+import static dagger.internal.codegen.base.Preconditions.checkState;
 import static dagger.internal.codegen.base.Scopes.uniqueScopeOf;
+import static dagger.internal.codegen.binding.ConfigurationAnnotations.getNullableType;
+import static dagger.internal.codegen.collect.Iterables.getOnlyElement;
+import static dagger.internal.codegen.extension.DaggerStreams.toImmutableSet;
 import static dagger.internal.codegen.xprocessing.XConverters.toJavac;
 import static dagger.internal.codegen.xprocessing.XElement.isMethod;
 import static dagger.internal.codegen.xprocessing.XElement.isTypeElement;
 import static dagger.internal.codegen.xprocessing.XElement.isVariableElement;
+import static dagger.internal.codegen.xprocessing.XElements.asMethod;
 import static dagger.internal.codegen.xprocessing.XElements.asTypeElement;
+import static dagger.internal.codegen.xprocessing.XElements.asVariable;
 import static dagger.internal.codegen.xprocessing.XTypes.isDeclared;
 import static dagger.spi.model.BindingKind.ASSISTED_FACTORY;
 import static dagger.spi.model.BindingKind.ASSISTED_INJECTION;
@@ -31,12 +41,14 @@ import static dagger.spi.model.BindingKind.COMPONENT_DEPENDENCY;
 import static dagger.spi.model.BindingKind.COMPONENT_PROVISION;
 import static dagger.spi.model.BindingKind.DELEGATE;
 import static dagger.spi.model.BindingKind.INJECTION;
+import static dagger.spi.model.BindingKind.MEMBERS_INJECTOR;
 import static dagger.spi.model.BindingKind.PROVISION;
 import static dagger.spi.model.BindingKind.SUBCOMPONENT_CREATOR;
-import static java.util.Objects.requireNonNull;
 
-import dagger.Module;
-import dagger.internal.codegen.base.Preconditions;
+import dagger.internal.codegen.base.ContributionType;
+import dagger.internal.codegen.binding.MembersInjectionBinding.InjectionSite;
+import dagger.internal.codegen.collect.ImmutableSet;
+import dagger.internal.codegen.collect.ImmutableSortedSet;
 import dagger.internal.codegen.javapoet.TypeNames;
 import dagger.internal.codegen.langmodel.DaggerTypes;
 import dagger.internal.codegen.xprocessing.XConstructorElement;
@@ -47,22 +59,22 @@ import dagger.internal.codegen.xprocessing.XMethodElement;
 import dagger.internal.codegen.xprocessing.XMethodType;
 import dagger.internal.codegen.xprocessing.XType;
 import dagger.internal.codegen.xprocessing.XTypeElement;
-import dagger.spi.model.BindingKind;
+import dagger.internal.codegen.xprocessing.XVariableElement;
 import dagger.spi.model.DaggerType;
 import dagger.spi.model.DependencyRequest;
 import dagger.spi.model.Key;
 import dagger.spi.model.RequestKind;
+import io.jbock.javapoet.ClassName;
 import jakarta.inject.Inject;
-import java.util.LinkedHashSet;
 import java.util.Optional;
-import java.util.Set;
 import java.util.function.BiFunction;
 
-/** A factory for {@link Binding} objects. */
+/** A factory for {@code Binding} objects. */
 public final class BindingFactory {
   private final DaggerTypes types;
   private final KeyFactory keyFactory;
   private final DependencyRequestFactory dependencyRequestFactory;
+  private final InjectionSiteFactory injectionSiteFactory;
   private final InjectionAnnotations injectionAnnotations;
 
   @Inject
@@ -70,15 +82,17 @@ public final class BindingFactory {
       DaggerTypes types,
       KeyFactory keyFactory,
       DependencyRequestFactory dependencyRequestFactory,
+      InjectionSiteFactory injectionSiteFactory,
       InjectionAnnotations injectionAnnotations) {
     this.types = types;
     this.keyFactory = keyFactory;
     this.dependencyRequestFactory = dependencyRequestFactory;
+    this.injectionSiteFactory = injectionSiteFactory;
     this.injectionAnnotations = injectionAnnotations;
   }
 
   /**
-   * Returns an {@link dagger.spi.model.BindingKind#INJECTION} binding.
+   * Returns an {@code dagger.spi.model.BindingKind#INJECTION} binding.
    *
    * @param constructorElement the {@code @Inject}-annotated constructor
    * @param resolvedEnclosingType the parameterized type if the constructor is for a generic class and the
@@ -87,10 +101,10 @@ public final class BindingFactory {
   // TODO(dpb): See if we can just pass the parameterized type and not also the constructor.
   public ProvisionBinding injectionBinding(
       XConstructorElement constructorElement, Optional<XType> resolvedEnclosingType) {
-    Preconditions.checkArgument(
+    checkArgument(
         constructorElement.hasAnnotation(TypeNames.INJECT)
             || constructorElement.hasAnnotation(TypeNames.ASSISTED_INJECT));
-    Preconditions.checkArgument(injectionAnnotations.getQualifier(constructorElement).isEmpty());
+    checkArgument(!injectionAnnotations.getQualifier(constructorElement).isPresent());
 
     XConstructorType constructorType = constructorElement.getExecutableType();
     XType enclosingType = constructorElement.getEnclosingElement().getType();
@@ -103,7 +117,7 @@ public final class BindingFactory {
 
     // Collect all dependency requests within the provision method.
     // Note: we filter out @Assisted parameters since these aren't considered dependency requests.
-    Set<DependencyRequest> provisionDependencies = new LinkedHashSet<>();
+    ImmutableSet.Builder<DependencyRequest> provisionDependencies = ImmutableSet.builder();
     for (int i = 0; i < constructorElement.getParameters().size(); i++) {
       XExecutableParameterElement parameter = constructorElement.getParameters().get(i);
       XType parameterType = constructorType.getParameterTypes().get(i);
@@ -115,9 +129,11 @@ public final class BindingFactory {
 
     ProvisionBinding.Builder builder =
         ProvisionBinding.builder()
+            .contributionType(ContributionType.UNIQUE)
             .bindingElement(constructorElement)
             .key(keyFactory.forInjectConstructorWithResolvedType(enclosingType))
-            .provisionDependencies(provisionDependencies)
+            .provisionDependencies(provisionDependencies.build())
+            .injectionSites(injectionSiteFactory.getInjectionSites(enclosingType))
             .kind(
                 constructorElement.hasAnnotation(TypeNames.ASSISTED_INJECT)
                     ? ASSISTED_INJECTION
@@ -143,10 +159,11 @@ public final class BindingFactory {
     XMethodElement factoryMethod = AssistedInjectionAnnotations.assistedFactoryMethod(factory);
     XMethodType factoryMethodType = factoryMethod.asMemberOf(factoryType);
     return ProvisionBinding.builder()
+        .contributionType(ContributionType.UNIQUE)
         .key(Key.builder(DaggerType.from(factoryType)).build())
         .bindingElement(factory)
         .provisionDependencies(
-            Set.of(
+            ImmutableSet.of(
                 DependencyRequest.builder()
                     .key(Key.builder(DaggerType.from(factoryMethodType.getReturnType())).build())
                     .kind(RequestKind.PROVIDER)
@@ -156,7 +173,7 @@ public final class BindingFactory {
   }
 
   /**
-   * Returns a {@link BindingKind#PROVISION} binding for a
+   * Returns a {@code dagger.spi.model.BindingKind#PROVISION} binding for a
    * {@code @Provides}-annotated method.
    *
    * @param contributedBy the installed module that declares or inherits the method
@@ -171,33 +188,38 @@ public final class BindingFactory {
         this::providesMethodBinding)
         .kind(PROVISION)
         .scope(uniqueScopeOf(providesMethod))
+        .nullableType(getNullableType(providesMethod))
         .build();
   }
 
-  private ProvisionBinding.Builder setMethodBindingProperties(
-      ProvisionBinding.Builder builder,
+  private <C extends ContributionBinding, B extends ContributionBinding.Builder<C, B>>
+  B setMethodBindingProperties(
+      B builder,
       XMethodElement method,
       XTypeElement contributedBy,
       Key key,
-      BiFunction<XMethodElement, XTypeElement, ProvisionBinding> create) {
+      BiFunction<XMethodElement, XTypeElement, C> create) {
     XMethodType methodType = method.asMemberOf(contributedBy.getType());
     if (!types.isSameType(toJavac(methodType), toJavac(method.getExecutableType()))) {
-      Preconditions.checkState(isTypeElement(method.getEnclosingElement()));
+      checkState(isTypeElement(method.getEnclosingElement()));
       builder.unresolved(create.apply(method, asTypeElement(method.getEnclosingElement())));
     }
     return builder
+        .contributionType(ContributionType.fromBindingElement(method))
         .bindingElement(method)
         .contributingModule(contributedBy)
         .key(key)
         .dependencies(
             dependencyRequestFactory.forRequiredResolvedXVariables(
-                method.getParameters(), methodType.getParameterTypes()));
+                method.getParameters(), methodType.getParameterTypes()))
+        .wrappedMapKeyAnnotation(wrapOptionalInEquivalence(getMapKey(method)));
   }
 
-  /** Returns a {@link BindingKind#COMPONENT} binding for the component. */
+  /** Returns a {@code dagger.spi.model.BindingKind#COMPONENT} binding for the component. */
   public ProvisionBinding componentBinding(XTypeElement componentDefinitionType) {
-    requireNonNull(componentDefinitionType);
+    checkNotNull(componentDefinitionType);
     return ProvisionBinding.builder()
+        .contributionType(ContributionType.UNIQUE)
         .bindingElement(componentDefinitionType)
         .key(keyFactory.forType(componentDefinitionType.getType()))
         .kind(COMPONENT)
@@ -205,12 +227,13 @@ public final class BindingFactory {
   }
 
   /**
-   * Returns a {@link BindingKind#COMPONENT_DEPENDENCY} binding for a component's
+   * Returns a {@code dagger.spi.model.BindingKind#COMPONENT_DEPENDENCY} binding for a component's
    * dependency.
    */
   public ProvisionBinding componentDependencyBinding(ComponentRequirement dependency) {
-    requireNonNull(dependency);
+    checkNotNull(dependency);
     return ProvisionBinding.builder()
+        .contributionType(ContributionType.UNIQUE)
         .bindingElement(dependency.typeElement())
         .key(keyFactory.forType(dependency.type()))
         .kind(COMPONENT_DEPENDENCY)
@@ -218,48 +241,63 @@ public final class BindingFactory {
   }
 
   /**
-   * Returns a {@link BindingKind#COMPONENT_PROVISION}
-   * binding for a method on a component's dependency.
+   * Returns a {@code dagger.spi.model.BindingKind#COMPONENT_PROVISION} or {@code
+   * dagger.spi.model.BindingKind#COMPONENT_PRODUCTION} binding for a method on a component's
+   * dependency.
+   *
+   * @param componentDescriptor the component with the dependency, not the dependency that has the
+   *     method
    */
-  public ProvisionBinding componentDependencyMethodBinding(
+  public ContributionBinding componentDependencyMethodBinding(
       ComponentDescriptor componentDescriptor, XMethodElement dependencyMethod) {
-    Preconditions.checkArgument(dependencyMethod.getParameters().isEmpty());
-    ProvisionBinding.Builder builder = ProvisionBinding.builder()
-        .key(keyFactory.forComponentMethod(dependencyMethod))
-        .kind(COMPONENT_PROVISION)
-        .scope(uniqueScopeOf(dependencyMethod));
+    checkArgument(dependencyMethod.getParameters().isEmpty());
+    ContributionBinding.Builder<?, ?> builder;
+    builder =
+        ProvisionBinding.builder()
+            .key(keyFactory.forComponentMethod(dependencyMethod))
+            .nullableType(getNullableType(dependencyMethod))
+            .kind(COMPONENT_PROVISION)
+            .scope(uniqueScopeOf(dependencyMethod));
     return builder
+        .contributionType(ContributionType.UNIQUE)
         .bindingElement(dependencyMethod)
         .build();
   }
 
   /**
-   * Returns a {@link BindingKind#BOUND_INSTANCE} binding for a
+   * Returns a {@code dagger.spi.model.BindingKind#BOUND_INSTANCE} binding for a
    * {@code @BindsInstance}-annotated builder setter method or factory method parameter.
    */
   ProvisionBinding boundInstanceBinding(ComponentRequirement requirement, XElement element) {
-    Preconditions.checkArgument(isVariableElement(element) || isMethod(element));
+    checkArgument(isVariableElement(element) || isMethod(element));
+    XVariableElement parameterElement =
+        isVariableElement(element)
+            ? asVariable(element)
+            : getOnlyElement(asMethod(element).getParameters());
     return ProvisionBinding.builder()
+        .contributionType(ContributionType.UNIQUE)
         .bindingElement(element)
-        .key(requirement.key().orElseThrow())
+        .key(requirement.key().get())
+        .nullableType(getNullableType(parameterElement))
         .kind(BOUND_INSTANCE)
         .build();
   }
 
   /**
-   * Returns a {@link BindingKind#SUBCOMPONENT_CREATOR} binding declared by a component
-   * method that returns a subcomponent builder. Use {{@link
-   * #subcomponentCreatorBinding(Set)}} for bindings declared using {@link
+   * Returns a {@code dagger.spi.model.BindingKind#SUBCOMPONENT_CREATOR} binding declared by a
+   * component method that returns a subcomponent builder. Use {{@code
+   * #subcomponentCreatorBinding(ImmutableSet)}} for bindings declared using {@code
    * Module#subcomponents()}.
    *
    * @param component the component that declares or inherits the method
    */
   ProvisionBinding subcomponentCreatorBinding(
       XMethodElement subcomponentCreatorMethod, XTypeElement component) {
-    Preconditions.checkArgument(subcomponentCreatorMethod.getParameters().isEmpty());
+    checkArgument(subcomponentCreatorMethod.getParameters().isEmpty());
     Key key =
         keyFactory.forSubcomponentCreatorMethod(subcomponentCreatorMethod, component.getType());
     return ProvisionBinding.builder()
+        .contributionType(ContributionType.UNIQUE)
         .bindingElement(subcomponentCreatorMethod)
         .key(key)
         .kind(SUBCOMPONENT_CREATOR)
@@ -267,55 +305,112 @@ public final class BindingFactory {
   }
 
   /**
-   * Returns a {@link BindingKind#SUBCOMPONENT_CREATOR} binding declared using {@link
-   * Module#subcomponents()}.
+   * Returns a {@code dagger.spi.model.BindingKind#SUBCOMPONENT_CREATOR} binding declared using
+   * {@code Module#subcomponents()}.
    */
   ProvisionBinding subcomponentCreatorBinding(
-      Set<SubcomponentDeclaration> subcomponentDeclarations) {
+      ImmutableSet<SubcomponentDeclaration> subcomponentDeclarations) {
     SubcomponentDeclaration subcomponentDeclaration = subcomponentDeclarations.iterator().next();
     return ProvisionBinding.builder()
+        .contributionType(ContributionType.UNIQUE)
         .key(subcomponentDeclaration.key())
         .kind(SUBCOMPONENT_CREATOR)
         .build();
   }
 
   /**
-   * Returns a {@link BindingKind#DELEGATE} binding.
+   * Returns a {@code dagger.spi.model.BindingKind#DELEGATE} binding.
    *
    * @param delegateDeclaration the {@code @Binds}-annotated declaration
+   * @param actualBinding the binding that satisfies the {@code @Binds} declaration
    */
   ContributionBinding delegateBinding(
-      DelegateDeclaration delegateDeclaration) {
-    return buildDelegateBinding(
-        ProvisionBinding.builder()
-            .scope(uniqueScopeOf(delegateDeclaration.bindingElement().get())),
-        delegateDeclaration);
+      DelegateDeclaration delegateDeclaration, ContributionBinding actualBinding) {
+    switch (actualBinding.bindingType()) {
+
+      case PROVISION:
+        return buildDelegateBinding(
+            ProvisionBinding.builder()
+                .scope(uniqueScopeOf(delegateDeclaration.bindingElement().get()))
+                .nullableType(actualBinding.nullableType()),
+            delegateDeclaration,
+            TypeNames.PROVIDER);
+
+      case MEMBERS_INJECTION: // fall-through to throw
+    }
+    throw new AssertionError("bindingType: " + actualBinding);
   }
 
   /**
-   * Returns a {@link BindingKind#DELEGATE} binding used when there is no binding that
-   * satisfies the {@code @Binds} declaration.
+   * Returns a {@code dagger.spi.model.BindingKind#DELEGATE} binding used when there is no binding
+   * that satisfies the {@code @Binds} declaration.
    */
   public ContributionBinding unresolvedDelegateBinding(DelegateDeclaration delegateDeclaration) {
     return buildDelegateBinding(
         ProvisionBinding.builder().scope(uniqueScopeOf(delegateDeclaration.bindingElement().get())),
-        delegateDeclaration);
+        delegateDeclaration,
+        TypeNames.PROVIDER);
   }
 
   private ContributionBinding buildDelegateBinding(
-      ProvisionBinding.Builder builder,
-      DelegateDeclaration delegateDeclaration) {
+      ContributionBinding.Builder<?, ?> builder,
+      DelegateDeclaration delegateDeclaration,
+      ClassName frameworkType) {
     return builder
-        .bindingElement(delegateDeclaration.bindingElement().orElseThrow())
-        .contributingModule(delegateDeclaration.contributingModule().orElseThrow())
-        .key(delegateDeclaration.key())
+        .contributionType(delegateDeclaration.contributionType())
+        .bindingElement(delegateDeclaration.bindingElement().get())
+        .contributingModule(delegateDeclaration.contributingModule().get())
+        .key(keyFactory.forDelegateBinding(delegateDeclaration, frameworkType))
         .dependencies(delegateDeclaration.delegateRequest())
+        .wrappedMapKeyAnnotation(delegateDeclaration.wrappedMapKey())
         .kind(DELEGATE)
         .build();
   }
 
+  /** Returns a {@code dagger.spi.model.BindingKind#MEMBERS_INJECTOR} binding. */
+  public ProvisionBinding membersInjectorBinding(
+      Key key, MembersInjectionBinding membersInjectionBinding) {
+    return ProvisionBinding.builder()
+        .key(key)
+        .contributionType(ContributionType.UNIQUE)
+        .kind(MEMBERS_INJECTOR)
+        .bindingElement(membersInjectionBinding.key().type().xprocessing().getTypeElement())
+        .provisionDependencies(membersInjectionBinding.dependencies())
+        .injectionSites(membersInjectionBinding.injectionSites())
+        .build();
+  }
+
+  /**
+   * Returns a {@code dagger.spi.model.BindingKind#MEMBERS_INJECTION} binding.
+   *
+   * @param resolvedType if {@code declaredType} is a generic class and {@code resolvedType} is a
+   *     parameterization of that type, the returned binding will be for the resolved type
+   */
+  // TODO(dpb): See if we can just pass one nongeneric/parameterized type.
+  public MembersInjectionBinding membersInjectionBinding(XType type, Optional<XType> resolvedType) {
+    // If the class this is injecting has some type arguments, resolve everything.
+    if (!type.getTypeArguments().isEmpty() && resolvedType.isPresent()) {
+      checkIsSameErasedType(resolvedType.get(), type);
+      type = resolvedType.get();
+    }
+    ImmutableSortedSet<InjectionSite> injectionSites = injectionSiteFactory.getInjectionSites(type);
+    ImmutableSet<DependencyRequest> dependencies =
+        injectionSites.stream()
+            .flatMap(injectionSite -> injectionSite.dependencies().stream())
+            .collect(toImmutableSet());
+
+    return MembersInjectionBinding.create(
+        keyFactory.forMembersInjectedType(type),
+        dependencies,
+        hasNonDefaultTypeParameters(type)
+            ? Optional.of(
+            membersInjectionBinding(type.getTypeElement().getType(), Optional.empty()))
+            : Optional.empty(),
+        injectionSites);
+  }
+
   private void checkIsSameErasedType(XType type1, XType type2) {
-    Preconditions.checkState(
+    checkState(
         types.isSameType(types.erasure(toJavac(type1)), types.erasure(toJavac(type2))),
         "erased expected type: %s, erased actual type: %s",
         types.erasure(toJavac(type1)),
@@ -333,7 +428,6 @@ public final class BindingFactory {
     if (defaultType.getTypeArguments().isEmpty()) {
       return false;
     }
-
 
     // The actual type parameter size can be different if the user is using a raw type.
     if (defaultType.getTypeArguments().size() != type.getTypeArguments().size()) {
